@@ -8,6 +8,8 @@
 	(lpxpak_get_blob_fd): added.
 	(lpxpak_blob_init): added.
 	(lpxpak_blob_destroy): added.
+	(lpxpak_get_blob_fd): changed to use newly introduced
+	lpxpak_blob_init().
 
 2009-01-27  Lars Hartmann  <lars (at) chaotika (dot) org>
 
